--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,17 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-Faker = "14.2.0"
-Flask = "2.2.2"
-Flask-Migrate = "3.1.0"
-Flask-SQLAlchemy = "2.5.1"
-importlib-resources = "5.10.0"
-ipdb = "0.13.9"
-pytest = "7.1.3"
-flask-restful = "*"
+flask = "2.2.2"
+flask-migrate = "*"
+flask-sqlalchemy = "*"
 sqlalchemy-serializer = "*"
+
+
+importlib-metadata = "6.0.0"
+importlib-resources = "5.10.0"
+
+[dev-packages]
+livereload = "*"
 
 [requires]
 python_full_version = "3.8.13"
