adds initial seed file functions using faker

--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-Faker = "14.2.0"
+Faker = "*"
+faker-commerce = "*"
 Flask = "2.2.2"
 Flask-Migrate = "3.1.0"
-Flask-SQLAlchemy = "2.5.1"
+Flask-SQLAlchemy = "3.0.2"
 importlib-resources = "5.10.0"
 ipdb = "0.13.9"
 pytest = "7.1.3"
