--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
     "name": "revenue-tracker",
     "version": "0.1.0",
     "private": true,
-    "proxy": "http://localhost:5555",
+    "proxy": "http://127.0.0.1:5555",
     "dependencies": {
       "@testing-library/jest-dom": "^5.17.0",
       "@testing-library/react": "^13.4.0",
